--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <form class="form-signin" action="/signin" method="POST">
+    <form class="form-signin" action="/connect" method="POST">
       <div class="text-center mb-4">
 <!--         <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
  -->
